# flai

./: .gitignore  README.md  pyproject.toml  rl_template.py
docs/: README.md  _coverpage.md  _sidebar.md  experiments.md  index.html  index.md  quickstart.md  review.md  seatsmart.md  tutorial.md
docs/pages/: quickstart.md  seatsmart.md  ubundle.md
flai/: __init__.py  core.py  logger.py
flai/envs/: __init__.py  seatsmart_env.py
flai/envs/seatsmart/: __init__.py  customer.py  event.py  flight.py  game.py  tracking.py
flai/envs/seatsmart/configs/: 3Zone.yaml
flai/envs/seatsmart/models/: action.py  analyst.py  customer.py  event.py  flight.py  observation.py  tracking.py
flai/interactive/: seatsmart_game.py
flai/interactive/seatsmart/: game_entities.py
flai/interactive/seatsmart/config/: arrival_distributions.json  customer_parameters.json  modes.json  pricing_rules.json  seatmaps.json  themes.json
flai/utils/: __init__.py  seeding.py
