[tool.poetry]
name = "flai"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "2.0.0.dev6"
numpy = "^1.18.4"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
rich = "^9.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[tool.poetry.scripts]
seatsmart = "flai:game"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
